--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         Khairunnisa Andini
       </h2>
       <p class="text-gray-400 mt-6 leading-relaxed">
-        Mahasiswa Teknik Informatika yang tertarik pada
-        data science, machine learning, dan pengembangan web.
+        Mahasiswa Teknik Informatika dari Universitas Mikroskil 
+        yang memiliki kemampuan bersosialisasi dan bekerja sama dengan masyarakat
+        melalui berbagai kegiatan dan bimbingan teknis. 
+        Memiliki keterampilan dasar pemrograman Python serta pemahaman di bidang ilmu data (Data Science). 
       </p>
 
       <div class="mt-8 flex gap-4">
