--- a/index.html
+++ b/index.html
@@ -1,58 +1,113 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Portfolio | Khairunnisa Andini</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-br from-[#0B0E1A] to-[#120F2E] text-white min-h-screen">
 
-  <!-- NAVBAR -->
-  <nav class="flex justify-between items-center px-10 md:px-20 py-6">
-    <h1 class="text-purple-500 font-bold text-xl">Nisa</h1>
-    <ul class="flex gap-6 text-gray-300">
-      <li>Home</li>
-      <li>About</li>
-      <li>Portfolio</li>
-      <li>Contact</li>
-    </ul>
-  </nav>
+<body class="bg-gradient-to-br from-black via-[#17000d] to-black text-white min-h-screen">
 
-  <!-- HERO -->
-  <section class="flex flex-col md:flex-row items-center justify-between px-10 md:px-20 mt-16 gap-10">
-    <div class="max-w-xl">
-      <p class="text-purple-400 text-lg">Hello, I'm</p>
-      <h2 class="text-4xl md:text-5xl font-bold mt-2">
-        Khairunnisa Andini
-      </h2>
-      <p class="text-gray-400 mt-6 leading-relaxed">
-        Mahasiswa Teknik Informatika dari Universitas Mikroskil 
-        yang memiliki kemampuan bersosialisasi dan bekerja sama dengan masyarakat
-        melalui berbagai kegiatan dan bimbingan teknis. 
-        Memiliki keterampilan dasar pemrograman Python serta pemahaman di bidang ilmu data (Data Science). 
-      </p>
+<!-- NAVBAR -->
+<nav class="flex justify-between items-center px-8 md:px-20 py-6">
+  <h1 class="text-pink-400 font-bold text-xl">Khairunnisa</h1>
+  <ul class="flex gap-6 text-gray-300">
+    <li class="hover:text-pink-400">Home</li>
+    <li class="hover:text-pink-400">About</li>
+    <li class="hover:text-pink-400">Projects</li>
+    <li class="hover:text-pink-400">Contact</li>
+  </ul>
+</nav>
 
-      <div class="mt-8 flex gap-4">
-        <a href="#" class="bg-purple-600 hover:bg-purple-700 px-6 py-3 rounded-lg">
-          Download CV
-        </a>
-        <a href="#portfolio" class="border border-purple-600 px-6 py-3 rounded-lg hover:bg-purple-600/20">
-          View Projects
-        </a>
+<!-- HERO -->
+<section class="flex flex-col md:flex-row items-center justify-between px-8 md:px-20 mt-16 gap-10">
+
+  <div class="max-w-xl">
+    <p class="text-pink-300 text-sm uppercase tracking-wider">
+      socialization fan • IT student • learning and socializing
+    </p>
+
+    <h2 class="text-4xl md:text-5xl font-bold mt-4">
+      Hello, I'm <span class="text-pink-400">Khairunnisa Andini</span>
+    </h2>
+
+    <p class="text-gray-300 mt-6 leading-relaxed">
+      seorang mahasiswa teknik informatika yang sedang belajar bersosialisasi
+      dan analis di berbagai bidang IT, saya berfokus pada ilmu data dan
+      bersosialisasi untuk memberikan solusi.
+    </p>
+
+    <p class="italic text-gray-400 mt-4">
+      mari belajar dan membangun untuk bersosialisasi dengan masyarakat dan pelajar
+    </p>
+
+    <!-- BUTTON -->
+    <div class="flex flex-wrap gap-4 mt-8">
+      <button class="bg-pink-500 hover:bg-pink-600 px-6 py-3 rounded-lg shadow-lg shadow-pink-500/30">
+        Download CV
+      </button>
+
+      <button class="border border-pink-500 px-6 py-3 rounded-lg hover:bg-pink-500/20">
+        View Projects
+      </button>
+
+      <button class="border border-pink-500 px-6 py-3 rounded-lg hover:bg-pink-500/20">
+        Certificate
+      </button>
+
+      <div class="px-6 py-3 rounded-lg bg-white/5">
+        <span class="text-2xl font-bold text-pink-400">0+</span><br>
+        <span class="text-sm text-gray-400">Years Experience</span>
       </div>
     </div>
+  </div>
 
-    <!-- FOTO -->
-    <div class="relative">
-      <div class="absolute inset-0 bg-purple-500 blur-3xl opacity-30 rounded-full"></div>
-      <img
-        src="https://via.placeholder.com/300"
-        class="relative w-64 h-64 md:w-72 md:h-72 rounded-full object-cover border-4 border-purple-500"
-        alt="Profile"
-      />
-    </div>
-  </section>
+  <!-- FOTO -->
+  <div class="relative">
+    <div class="absolute inset-0 bg-pink-500 blur-3xl opacity-30 rounded-full"></div>
+    <img
+      src="https://via.placeholder.com/300"
+      class="relative w-64 h-64 md:w-72 md:h-72 rounded-full object-cover border-4 border-pink-500"
+    >
+  </div>
+
+</section>
+
+<!-- ABOUT -->
+<section class="px-8 md:px-20 mt-20">
+  <h3 class="text-pink-400 text-xl font-semibold">About Me</h3>
+  <h2 class="text-2xl md:text-3xl font-bold mt-2">
+    with learning anything is possible
+  </h2>
+
+  <p class="text-gray-300 mt-4 max-w-3xl">
+    Saya adalah mahasiswa Teknik Informatika yang menyukai pembelajaran
+    teknologi dan kegiatan sosial. Saya percaya bahwa dengan belajar dan
+    berbagi, teknologi dapat menjadi solusi nyata bagi masyarakat.
+  </p>
+</section>
+
+<!-- PROJECT & CONTACT -->
+<section class="px-8 md:px-20 mt-16 pb-24">
+  <h3 class="text-pink-400 text-xl font-semibold">Connect With Me</h3>
+
+  <div class="flex gap-4 mt-6 flex-wrap">
+    <a href="#" class="px-5 py-3 rounded-lg bg-pink-500/10 hover:bg-pink-500/30">
+      TikTok
+    </a>
+    <a href="#" class="px-5 py-3 rounded-lg bg-pink-500/10 hover:bg-pink-500/30">
+      Instagram
+    </a>
+    <a href="#" class="px-5 py-3 rounded-lg bg-pink-500/10 hover:bg-pink-500/30">
+      YouTube
+    </a>
+  </div>
+</section>
+
+<footer class="text-center text-gray-500 pb-6">
+  © 2025 Khairunnisa Andini
+</footer>
 
 </body>
 </html>
