--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
 
       <button class="border border-pink-500 px-6 py-3 rounded-lg hover:bg-pink-500/20">
         Certificate
+        <img src="certf1.jpg">
+        <img src="certf2.jpg">
+        <img src="certf3.jpg">
+        <img src="certf4.jpg">
+        <img src="certf5.jpg">
+        <img src="certf6.jpg">
+        <img src="certf7.jpg">
+        <img src="certf8.jpg">
+        <img src="certf9.jpg">
+        <img src="certf10.jpg">
+        <img src="certf11.jpg">
+        <img src="certf12.jpg">
+        <img src="certf13.jpg">
+
       </button>
 
       <div class="px-6 py-3 rounded-lg bg-white/5">
